<resources>
    <string name="app_name">StoryApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="label_or_click_to_register">or click to register</string>
    <string name="label_let_s_login_first">Let\'s login first</string>
    <string name="label_login">Login</string>
    <string name="label_register_new_account">Register new account</string>
    <string name="label_or_click_to_login">or click to login</string>
    <string name="label_register">Register</string>
    <string name="label_logout">Logout</string>
    <string name="label_description">Description</string>
    <string name="label_uploaded">Uploaded</string>
    <string name="label_name">Name</string>
    <string name="label_posted_by">Posted by</string>
    <string name="label_camera">Camera</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_add_story">Add Story</string>

    <string name="desc_app_logo">App logo</string>
    <string name="desc_user_profile_picture">User profile picture</string>
    <string name="desc_picture_to_be_posted">Picture to be posted</string>
    <string name="desc_add_story_image_placeholder">Add story image placeholder</string>
    <string name="desc_new_story_description">This is a story photo description</string>
    <string name="desc_go_back_to_list_story">Go back to list story</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_write_a_description">Write a description</string>

    <string name="error_password_at_least_characters">Password should be at least 8 characters</string>
    <string name="error_email_format_invalid">Email format is invalid</string>
    <string name="error_empty_name">Name must not be empty</string>
    <string name="error_empty_email">Email must not be empty</string>
    <string name="error_empty_password">Password must not be empty</string>
    <string name="error_empty_description">Description must not be empty</string>

    <string name="message_add_story_success">Add new story success</string>
    <string name="message_upload_photo_required">Upload photo required</string>
    <string name="title_choose_a_picture">Choose a picture</string>

    <string name="time_just_now">Just now</string>
    <string name="time_a_minute_ago">a minute ago</string>
    <string name="time_minutes_ago">"%1$d minutes ago"</string>
    <string name="time_an_hour_ago">"an hour ago"</string>
    <string name="time_hours_ago">"%1$d hours ago"</string>
    <string name="time_yesterday">"yesterday"</string>
    <string name="time_days_ago">"%1$d days ago"</string>
    <string name="time_a_month_ago">"a month ago"</string>
    <string name="time_months_ago">"%1$d months ago"</string>
    <string name="time_a_year_ago">"a year ago"</string>
    <string name="time_years_ago">"%1$d years ago"</string>

    <string name="package_authority">com.dandev.storyapp</string>
    <string name="desc_navigate_to_maps">Navigate to maps</string>
    <string name="btn_try_again">Try Again</string>
    <string name="check_your_connection">Check your internet connection and try again</string>
    <string name="txt_empty">Empty</string>

</resources>