<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryLightColorAsBackground"
    android:padding="30dp"
    tools:context=".ui.home.add_story.AddStoryFragment">

    <ImageView
        android:id="@+id/iv_add_image_placeholder"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/desc_add_story_image_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@tools:sample/backgrounds/scenic"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="12dp"
        android:text="@string/label_camera"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toStartOf="@id/btn_add_gallery"
        app:layout_constraintStart_toStartOf="@id/iv_add_image_placeholder"
        app:layout_constraintTop_toBottomOf="@id/iv_add_image_placeholder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="12dp"
        android:text="@string/label_gallery"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toEndOf="@id/btn_add_camera"
        app:layout_constraintEnd_toEndOf="@id/iv_add_image_placeholder"
        app:layout_constraintTop_toBottomOf="@id/iv_add_image_placeholder" />

    <TextView
        android:id="@+id/tv_label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/label_description"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_camera" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:boxBackgroundColor="@color/primaryLightColor"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_description"
        app:layout_constraintEnd_toEndOf="parent">

        <com.dandev.storyapp.util.custom_view.CustomTextInputEditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_write_a_description"
            android:textSize="14sp"
            android:gravity="top"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_story"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_add_story"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_add_description"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>